objects/Volunteering_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_type__c</fullName>
        <description>Opportunity types/filters</description>
        <inlineHelpText>Select as many descriptions of the type of opportunity as possible</inlineHelpText>
        <label>Opportunity types/filters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animals &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Befriending &amp; Buddying</fullName>
                </value>
                <value>
                    <fullName>Business Management &amp; Research</fullName>
                </value>
                <value>
                    <fullName>Campaigning &amp; lobbying</fullName>
                </value>
                <value>
                    <fullName>Career development &amp; work experience</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Communication &amp; public speaking</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Elderly</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Gardening</fullName>
                </value>
                <value>
                    <fullName>Human rights</fullName>
                </value>
                <value>
                    <fullName>Life Skills</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Music &amp; Production</fullName>
                </value>
                <value>
                    <fullName>Practical work &amp; DIY</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Sports Development</fullName>
                </value>
                <value>
                    <fullName>Teaching training &amp; coaching</fullName>
                </value>
                <value>
                    <fullName>Technology &amp; Computers</fullName>
                </value>
                <value>
                    <fullName>Theatre &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Youth Work</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Community development</fullName>
                </value>
                <value>
                    <fullName>Poverty Reduction</fullName>
                </value>
                <value>
                    <fullName>Events and festivals</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <description>The organisation the volunteering opportunity is with</description>
        <inlineHelpText>The organisation the volunteering opportunity is with</inlineHelpText>
        <label>Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Young Person, GPs, Core Staff, Summer Staff 2011, Grad2011</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Volunteering_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Requiements__c</fullName>
        <label>Other Requiements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_mobility_and_access_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the venue have other mobility and access problems?</description>
        <inlineHelpText>Does the venue have other mobility and access problems?</inlineHelpText>
        <label>Other mobility and access issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_to_HS_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to HS Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_to_LH_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Signposting Opportunities Name
Organisation
Location (address)
Opportunity Post code
Opportunity types
Main Opportunity Types
Summary description
Full description
Signposting Opp type
Date(s)
Young Person Sign-up action
Sign. opp. Owner</inlineHelpText>
        <label>Publish to LH Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_to_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box checked when the volunteering opportunity should be published on the website</description>
        <inlineHelpText>Check box when this volunteering opportunity should be published on the website</inlineHelpText>
        <label>Publish to website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE( 
CASE(Volunteering_opportunity_quality__c, 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_by_not_quality__c</fullName>
        <label>Reasons by not quality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Safeguarding_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do they have a safeguarding policy?</description>
        <inlineHelpText>Do they have a safeguarding policy? Tick the box if yes</inlineHelpText>
        <label>Safeguarding policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesforceVOId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesforceVOId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_users_present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will there be beneficiaries/service users involved/present on the day?</description>
        <inlineHelpText>Will there be beneficiaries/service users involved/present on the day?</inlineHelpText>
        <label>Service users present?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signposting_Opp_type__c</fullName>
        <label>Signposting Opp. type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volunteering</fullName>
                </value>
                <value>
                    <fullName>Community Group</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signposting_Opportunities_Name__c</fullName>
        <formula>HYPERLINK(&apos;TCSPortal_VolunteeringOpportunityDetail?id=&apos;+Id, Name,&apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signposting Opportunities Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_aspects_for_16_18_year_olds__c</fullName>
        <description>Are there any specific aspects we should be aware of with regard to 16-18 year olds?</description>
        <inlineHelpText>Are there any specific aspects we should be aware of with regard to 16-18 year olds?</inlineHelpText>
        <label>Specific aspects for 16-18 year olds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specific_safety_equipment_needed1__c</fullName>
        <label>Specific safety equipment needed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specific_safety_equipment_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there any specific safety equipment needed to be able to volunteer with the partner?</description>
        <inlineHelpText>Is there any specific safety equipment needed to be able to volunteer with the partner?</inlineHelpText>
        <label>Specific safety equipment needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suitable_for_hearing_impaired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the event be suitable for a YP who has a hearing impairment?</description>
        <inlineHelpText>Will the event be suitable for a YP who has a hearing impairment?</inlineHelpText>
        <label>Suitable for hearing impaired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suitable_for_learning_difficulties__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the event be suitable for a YP who has a severe learning difficulty?</description>
        <inlineHelpText>Will the event be suitable for a YP who has a severe learning difficulty?</inlineHelpText>
        <label>Suitable for learning difficulties?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suitable_for_mobility_difficulties__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the event be suitable for a YP who has a severe mobility difficulty?</description>
        <inlineHelpText>Will the event be suitable for a YP who has a severe mobility difficulty?</inlineHelpText>
        <label>Suitable for mobility difficulties?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suitable_for_visually_impaired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the event be suitable for a YP who has a visual impairment?</description>
        <inlineHelpText>Will the event be suitable for a YP who has a visual impairment?</inlineHelpText>
        <label>Suitable for visually impaired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_description__c</fullName>
        <description>Short summary description of the opportunity</description>
        <inlineHelpText>Short summary description of the opportunity</inlineHelpText>
        <label>Summary description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_s__c</fullName>
        <description>The time/s of the volunteering opportunity</description>
        <inlineHelpText>The time/s of the volunteering opportunity</inlineHelpText>
        <label>Time (s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_HS_Hours__c</fullName>
        <label>Total HS Hours</label>
        <summarizedField>HS_Hours__c.HS_Hours__c</summarizedField>
        <summaryForeignKey>HS_Hours__c.Signposting_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours_volunteered__c</fullName>
        <inlineHelpText>total amount of hours from all contacts volunteering for this opportunity.</inlineHelpText>
        <label>Total Hours volunteered</label>
        <summaryForeignKey>Hours__c.Volunteering_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteering_Places_Left__c</fullName>
        <formula>Approx_number_of_volunteering_places__c  -  Confirmed_volunteers__c</formula>
        <label>Volunteering Places Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteering_opportunity_quality__c</fullName>
        <label>Volunteering opportunity quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteers_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do they have a volunteers policy?</description>
        <inlineHelpText>Do they have a volunteers policy? Tick the checkbox if yes</inlineHelpText>
        <label>Volunteers policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Day_1__c</fullName>
        <label>Welcome Day 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Day_2__c</fullName>
        <label>Welcome Day 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Day_3__c</fullName>
        <label>Welcome Day 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_Day_3_attachment_link__c</fullName>
        <label>Welcome Day 3 attachment link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_Day_Feedback__c</fullName>
        <label>Welcome Day Feedback</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_Day_Feedback_update__c</fullName>
        <inlineHelpText>Enter update here and then save</inlineHelpText>
        <label>Welcome Day Feedback update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_day_1_attachment_link__c</fullName>
        <label>Welcome day 1 attachment link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_day_2_attachment_link__c</fullName>
        <label>Welcome day 2 attachment link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wheelchair_accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there access to all necessary areas, including lavatories, for someone in a wheelchair?</description>
        <inlineHelpText>Is there access to all necessary areas, including lavatories, for someone in a wheelchair? Tick the checkbox if yes</inlineHelpText>
        <label>Wheelchair accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_is_first_aid_trained__c</fullName>
        <description>Who at the partner is first aid trained?</description>
        <inlineHelpText>Who at the partner is first aid trained?</inlineHelpText>
        <label>Who is first aid trained?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>IF(OR( Cluster__r.Name = &quot;BADHAV&quot;,  Cluster__r.Name = &quot;BEN&quot;,  Cluster__r.Name = &quot;BRICC&quot;,  Cluster__r.Name = &quot;NERF&quot;,  Cluster__r.Name = &quot;TH3&quot;, Cluster__r.Name = &quot;BETHH&quot;, Cluster__r.Name = &quot;BBLG&quot;, Cluster__r.Name = &quot;BADWHRN&quot;), &quot;North East London&quot;, 

IF(OR( Cluster__r.Name = &quot;CAS&quot;,  Cluster__r.Name = &quot;BBG&quot;,  Cluster__r.Name = &quot;SLL&quot;,  Cluster__r.Name = &quot;WestSurrey&quot;,  Cluster__r.Name = &quot;EastSurrey&quot;, Cluster__r.Name = &quot;SLC&quot;, Cluster__r.Name = &quot;SSH&quot;, Cluster__r.Name = &quot;CHIW&quot;), &quot;South London and Surrey&quot;, 

IF(OR( Cluster__r.Name = &quot;HEAL&quot;,  Cluster__r.Name = &quot;HIHO&quot;,  Cluster__r.Name = &quot;MRK&quot;,  Cluster__r.Name = &quot;TRIW&quot;, Cluster__r.Name = &quot;HRW&quot;, Cluster__r.Name = &quot;HEK&quot; , Cluster__r.Name = &quot;MAK&quot;), &quot;West London&quot;, 

IF(OR( Cluster__r.Name = &quot;Lanc&quot;,  Cluster__r.Name = &quot;SouthManc&quot;,  Cluster__r.Name = &quot;NorthManc&quot;, Cluster__r.Name = &quot;Manc&quot; , Cluster__r.Name = &quot;Lanc 2012&quot;, Cluster__r.Name = &quot;Micro Cluster&quot;), &quot;North West&quot;, 

IF(OR( Cluster__r.Name = &quot;NorthBirmingham&quot;,  Cluster__r.Name = &quot;SouthBirmingham&quot;,  Cluster__r.Name = &quot;BlackCountry&quot;,  Cluster__r.Name = &quot;CaW&quot;,  Cluster__r.Name = &quot;Solihull&quot;, Cluster__r.Name = &quot;Birmingham&quot;, Cluster__r.Name = &quot;SCaW&quot;), &quot;Midlands&quot;,  &quot;Cluster not specified&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Signposting Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>HS_Owner__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Publish_to_website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <label>All HS 2015</label>
    </listViews>
    <listViews>
        <fullName>All_HS_2015</fullName>
        <columns>NAME</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>HS_Owner__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Publish_to_website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>Opportunity_City__c</field>
            <operation>equals</operation>
            <value>Hackney</value>
        </filters>
        <label>All HS 2015</label>
    </listViews>
    <listViews>
        <fullName>All_HS_20151</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>HS_Owner__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Publish_to_website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>Opportunity_City__c</field>
            <operation>equals</operation>
            <value>Hackney</value>
        </filters>
        <label>All HS 2015</label>
    </listViews>
    <listViews>
        <fullName>All_HS_volunteering_opps</fullName>
        <columns>NAME</columns>
        <columns>Organisation__c</columns>
        <columns>HeadStart_Region__c</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>HS_Longitude__c</columns>
        <columns>HS_Latitude__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>HS_Owner__c</columns>
        <columns>Publish_to_HS_Website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <columns>Opportunity_Post_code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Publish_to_HS_Website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All HS volunteering opps</label>
    </listViews>
    <listViews>
        <fullName>All_HS_volunteering_opps_2016</fullName>
        <booleanFilter>1 AND (2 or 4) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Organisation__c</columns>
        <columns>Opportunity_Post_code__c</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>Welcome_Day_1__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Confirmed_volunteers__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>HS_Owner__c</columns>
        <columns>Welcome_day_1_attachment_link__c</columns>
        <columns>Image_preview__c</columns>
        <columns>Location_of_Welcome_day_1a__c</columns>
        <columns>Directions_to_welcome_day_1__c</columns>
        <columns>Publish_to_HS_Website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>bevan,eleanor,jayde,alice handelman,karen scott,tutton,michelle besa</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>caitlin,rebecca jones,daniel watson</value>
        </filters>
        <label>All HS volunteering opps, 2016</label>
    </listViews>
    <listViews>
        <fullName>All_Joel_Published</fullName>
        <columns>NAME</columns>
        <columns>Availability__c</columns>
        <columns>HeadStart_Region__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Confirmed_volunteers__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Opportunity_Post_code__c</columns>
        <columns>Publish_to_HS_Website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <columns>HS_Latitude__c</columns>
        <columns>HS_Longitude__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_to_HS_Website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.HeadStart_Creation</value>
        </filters>
        <label>All Joel Published</label>
    </listViews>
    <listViews>
        <fullName>All_Joel_Published_no_post_code</fullName>
        <columns>NAME</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Publish_to_website__c</columns>
        <columns>Publish_to_HS_Website__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <columns>Welcome_day_1_attachment_link__c</columns>
        <columns>Opportunity_Post_code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_to_HS_Website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HS_Volunteering_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Opportunity_Post_code__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <label>All Joel Published no post code</label>
    </listViews>
    <listViews>
        <fullName>All_TCS_created_opps</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Cluster__c</columns>
        <columns>NAME</columns>
        <columns>Publish_to_website__c</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <label>All TCS-created opps</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TCS_created_opps1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Cluster__c</columns>
        <columns>NAME</columns>
        <columns>Publish_to_website__c</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>Date_this_opportunity_expires__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All TCS-created opps</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TCS_created_opps2</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <columns>Cluster__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>Date_this_opportunity_expires__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Publish_to_website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>headstart</value>
        </filters>
        <label>Non-Headstart TCS Oppourtunities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TCS_created_opps_Summer_London</fullName>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Cluster__c</columns>
        <columns>NAME</columns>
        <columns>Publish_to_website__c</columns>
        <columns>Display_on_TCS_home_page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>notContain</operation>
            <value>Birmingham,Lanc,ScaW,Manchester</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/23/2012 12:00 AM</value>
        </filters>
        <label>All TCS-created opps (Summer London)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TCS_opps_for_website_display</fullName>
        <columns>NAME</columns>
        <columns>Publish_to_website__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>Publish_to_website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_this_opportunity_expires__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All TCS opps for website display</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Autumn_partners_2015_Becky</fullName>
        <columns>NAME</columns>
        <columns>Organisation__c</columns>
        <columns>Borough_of_Signposting_Opp__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>HS_Volunteering_Opp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Volunteering_Opportunity__c.TCN_creation</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/15/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>HS_Owner__c</field>
            <operation>notContain</operation>
            <value>Ben</value>
        </filters>
        <label>Autumn partners 2015 (Becky)</label>
    </listViews>
    <listViews>
        <fullName>BRICC_Signposting_Opps</fullName>
        <columns>NAME</columns>
        <columns>Borough_area_this_applies_to__c</columns>
        <columns>Opportunity_type__c</columns>
        <columns>Approx_number_of_volunteering_places__c</columns>
        <columns>Date_this_opportunity_expires__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>BRICC</value>
        </filters>
        <filters>
            <field>Date_this_opportunity_expires__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>BRICC Signposting Opps</label>
        <sharedTo>
            <group>Prog_BRICC_2013</group>
        </sharedTo>
    </listViews>
</CustomObject>